--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li> <a href = "index.html">About</a></li>
             <li> <a href = "portfolio.html">Portfolio</a></li>
-            <li> <a href = "reasume.html">Resume</a></li>
+            <li> <a href = "resume.html">Resume</a></li>
 
         </ul>
     </nav>
