Part 2 of Personal Portfolio

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="images/favicon.png" />
 </head>
 <body id="about">
+    <header>
+        <h1>Jason Hua</h1>
+    </header>
     <nav>
         <ul>
             <li> <a href = "index.html">About</a></li>
@@ -18,10 +21,10 @@
         </ul>
     </nav>
    <main>
-    <h1>Jason Hua</h1>
+    <h1>About</h1>
     <img src="images/avatar.jpg" />
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit sed. Pellentesque adipiscing commodo elit at. Sit amet dictum sit amet justo. In est ante in nibh mauris cursus mattis molestie a. Pellentesque sit amet porttitor eget dolor morbi. Scelerisque eleifend donec pretium vulputate. Sem et tortor consequat id porta. Leo vel fringilla est ullamcorper eget nulla facilisi. Turpis tincidunt id aliquet risus feugiat. Sit amet est placerat in egestas. Non enim praesent elementum facilisis. Posuere morbi leo urna molestie at. Sollicitudin tempor id eu nisl.</p>
-    <p>Massa placerat duis ultricies lacus sed. Morbi tristique senectus et netus. Odio tempor orci dapibus ultrices in iaculis nunc sed. Aliquet nec ullamcorper sit amet. Purus non enim praesent elementum facilisis leo vel fringilla est. Porta lorem mollis aliquam ut porttitor leo a. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Magna eget est lorem ipsum dolor sit amet consectetur adipiscing. Enim sed faucibus turpis in eu. Cras sed felis eget velit aliquet sagittis id consectetur purus. Nisi scelerisque eu ultrices vitae auctor eu augue ut lectus. Nec ullamcorper sit amet risus nullam. Morbi tincidunt ornare massa eget egestas purus viverra accumsan in. Rhoncus mattis rhoncus urna neque viverra justo nec. Congue mauris rhoncus aenean vel. Nisi scelerisque eu ultrices vitae auctor. Eu mi bibendum neque egestas congue.</p>
+    <p>As a freshman at Rose-Hulman Institute of Technology, I'm diving deep into the realms of computer science and software engineering, fields that spark not just my curiosity but my passion. My fascination with computers isn't confined to the classroom; it extends into my personal life, where I've found joy and challenge in building PCs. Not just for myself, but also for my friends, turning what started as a hobby into a skill I'm proud of. This passion for technology is matched by my commitment to staying active and social. I make it a point to hit the gym regularly, ensuring that I keep my body as fit as my mind. Balancing academic pursuits with physical well-being, I also cherish the moments spent hanging out with friends, believing that a well-rounded life fuels both creativity and innovation.</p>
+    <p>Looking ahead, I'm driven by a vision to reshape the music technology landscape. Observing how pervasive autotune has become, often at the expense of an artist's unique voice, I aspire to develop personalized music software. This isn't just about adjusting pitches but preserving the distinctiveness that makes each voice special. I envision a platform that can enhance musical expression without sacrificing authenticity, aiming to bring artists' true sounds to the forefront. This dream is a synthesis of my love for technology, creativity, and a desire to make a lasting impact in the world of music, ensuring artists can be heard as they truly are, in all their unfiltered glory.</p>
    </main>
    <footer>
     You can email me at huaj1@rose-hulman.edu
