--- a/public/resume.html
+++ b/public/resume.html
@@ -9,6 +9,9 @@
     <link rel="icon" href="images/favicon.png" />
 </head>
 <body id="resume">
+    <header>
+        <h1>Jason Hua</h1>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">About</a></li>
@@ -17,7 +20,7 @@
         </ul>
     </nav>
     <main>
-        <h1>Jason Hua</h1>
+        <h1>Resume</h1>
         <p>US Citizen | Fishers IN 46037 | <a href="mailto:huaj1@rose-hulman.edu">huaj1@rose-hulman.edu</a> | (317) 572-0805</p>
         
         <section>
