--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <title>Jason Hua's Personal Website</title>
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/jh-symbol.png">
+    <link rel="manifest" href="site.webmanifest">
 </head>
 <body id="about">
     <header>
