--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -24,44 +24,47 @@
     <h1>Portfolio</h1>
    <ul id="portfolioItems">
     <li>
-        <h2> <a href="#">Project Name</a></h2>
-        <img src="images/portfolio/project.png" />
-        <p>This is the name of Jason's Project</p> 
+        <h2> <a href="#">AI and Autotuning</a></h2>
+        <img src="images/portfolio/ai-autotune.jpg" style="max-width: 400px; max-height: 400px;" />
+        <p>Artificial intelligence (AI) and autotuning have become ubiquitous in the music industry, but they often come at the expense of the artist's unique voice and integrity. As an aspiring technologist and musician, I'm passionate about addressing this issue.</p>
+        <p>In my future projects, I aim to develop software solutions that preserve the authenticity and individuality of artists' voices while leveraging technology to enhance musical expression.</p>
     </li>
     <li>
-        <h2><a href="#">Markup Only</a></h2>
-        <img src="images/portfolio/01-markup.png" />
-        <p>At this point, we will have added a few lines of CSS to let the content breathe.</p>
+        <h2><a href="https://hseschedule.app/" target="_blank">HSE Schedules App</a></h2>
+        <a href="https://hseschedule.app/" target="_blank"><img src="images/portfolio/hseapps.png" style="max-width: 400px; max-height: 400px;" /></a>
+        <p>The HSE Schedules app is designed to assist high school students by providing essential information about their daily school schedules and important announcements. I was apart of developing and maintaining the app reguarly. Here are some of its key features:</p>
+        <ul>
+            <li>Class End Times: Students can easily check when their classes end, helping them manage their time effectively.</li>
+            <li>Lunch Menu: The app displays the daily lunch menu, allowing students to plan their meals in advance.</li>
+            <li>School Calendar: Users can access the school calendar to stay updated on upcoming events, holidays, and important dates.</li>
+            <li>Announcements: Important announcements from the school administration are communicated through the app, ensuring that students are informed about any changes or updates.</li>
+        </ul>
+        <p>To view the project, click on the logo above. This app was mainly built using React.</p>
     </li>
     <li>
-        <h2><a href="#">Markup with Space</a></h2>
-        <img src="images/portfolio/02-space.png" />
-        <p>At this point, we will have created a basic layout for our portfolio.</p>
+        <h2><a href="#">HSE Banks</a></h2>
+        <h2><a href="https://hsebanks.vercel.app/" target="_blank"></a></h2>
+        <a href="https://hsebanks.vercel.app/" target="_blank"><img src="images/portfolio/hsebanks.png" style="max-width: 400px; max-height: 400px;" /></a>
+        <p>The HSE Banks web app allows students to keep track of their finances and monitor their spending habits. Key features of the app include:</p>
+        <ul>
+            <li>Expense Tracking: Students can record their purchases and expenses, categorizing them based on tags for easy organization.</li>
+            <li>Tagging System: Users can assign tags to specific purchases, allowing them to group expenses and analyze spending patterns.</li>
+            <li>Category Analysis: The app provides insights into spending habits by displaying categories of expenses and the amount spent in each category.</li>
+            <li>Financial Awareness: By visualizing their spending, students can gain a better understanding of their finances and make informed decisions.</li>
+        </ul>
+        <p>This app was also made using React. Click on the image to view the app.</p>
     </li>
     <li>
-        <h2><a href="#">Basic Layout</a></h2>
-        <img src="images/portfolio/03-layout.png" />
-        <p>Adding some font choices at this point will really bring in some personality!</p>
-    </li>
-    <li>
-        <h2><a href="#">Typography</a></h2>
-        <img src="images/portfolio/04-typography.png" />
-        <p>Adding something here to fill in the gap</p>
-    </li>
-    <li>
-        <h2><a href="#">Images</a></h2>
-        <img src="images/portfolio/05-images.png" />
-        <p>Integrating images with the layout can give a visual boost to the portfolio.</p>
-    </li>
-    <li>
-        <h2><a href="#">Colors</a></h2>
-        <img src="images/portfolio/06-colors.png" />
-        <p>Choosing the right color scheme can enhance the visual appeal and convey the mood.</p>
-    </li>
-    <li>
-        <h2><a href="#">Letting It Rest</a></h2>
-        <img src="images/portfolio/07-letting-it-rest.png" />
-        <p>Taking a break from the project can provide new insights and perspectives.</p>
+        <h2><a href="#">HSE Courses</a></h2>
+        <h2><a href="https://hsecourses.app/" target="_blank"></a></h2>
+        <a href="https://hsecourses.app/" target="_blank"><img src="images/portfolio/hsecourses.jpg" style="max-width: 400px; max-height: 400px;" /></a>
+        <p>The HSE Courses app is designed to help high school students track their academic progress and plan their course schedules. Here are some of its key features:</p>
+        <ul>
+            <li>Graduation Requirements: Students can view the classes they need to take in order to fulfill graduation requirements, ensuring they stay on track to graduate.</li>
+            <li>Course Planner: The app includes a planner feature where students can schedule their classes and organize their academic workload.</li>
+            <li>Course Details: Users can learn more about each class by clicking on it, accessing information such as course description, prerequisites, and instructor.</li>
+        </ul>
+        <p>HSE Courses provides students with a comprehensive tool to manage their academic journey. You can click on the image to view the app made using React.</p>
     </li>
    </ul>
    </main>
